--- a/Materias/2S2020/PED_CE342/Turma_C/Turma_C.tex
+++ b/Materias/2S2020/PED_CE342/Turma_C/Turma_C.tex
@@ -1,4 +1,4 @@
-% Created 2020-11-13 sex 18:15
+% Created 2020-11-14 sáb 16:36
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -38,7 +38,7 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \maketitle
 
 \section{Monetaristas}
-\label{sec:orgb5f37b7}
+\label{sec:org4eea7d7}
 
 \begin{center}
 \begin{longtable}{lr}
@@ -95,24 +95,23 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \end{center}
 
 \subsection{Notas}
-\label{sec:orgc44f89f}
+\label{sec:orgfd4f549}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/monetaristas.png}
 \end{center}
 
 \subsection{Notas e presença}
-\label{sec:org7c446d2}
+\label{sec:org62624f5}
 
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/monetaristas_presenca.png}
 \end{center}
 
 \section{Novos Clássicos}
-\label{sec:orgd97baae}
+\label{sec:org65cceb5}
 
 \begin{itemize}
-\item[{$\square$}] Checar resenha Gabriel Pereira e Gabriel Sila Gonçalvez
-\item[{$\square$}] Computar notas
+\item[{$\square$}] Computar notas Forms
 \item[{$\square$}] Preencher presenhas na tabela da Ana Rosa
 \end{itemize}
 \begin{center}
@@ -169,19 +168,19 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \end{longtable}
 \end{center}
 \subsection{Notas}
-\label{sec:org857011d}
+\label{sec:orge2d0c72}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/novosclassicos.png}
 \end{center}
 \subsection{Notas e Presença}
-\label{sec:orge49692c}
+\label{sec:org5250dbe}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/novosclassicos_presenca.png}
 \end{center}
 \subsection{Verificação de plágio por amostragem}
-\label{sec:orgc142690}
+\label{sec:orgf8bede2}
 \subsubsection{Sorteio}
-\label{sec:org14f48cf}
+\label{sec:orge41a026}
 
 \begin{minted}[frame=lines,fontsize=\scriptsize,linenos]{python}
 pre_selecionados = ["216397", "235042"]
@@ -222,11 +221,44 @@ RA Sorteados
 
 
 
-\subsubsection{Resultado Turnitin}
-\label{sec:orgca82a31}
+\subsubsection{Resultado Turnitin \textit{<2020-11-14 sáb>}}
+\label{sec:org94e4033}
+
+\begin{table}[htbp]
+\caption{\label{TurnitinNvC}Resumo relatório de origilidadade}
+\centering
+\begin{tabular}{rl}
+\hline
+RA & Grau de semelhança\\
+\hline
+103034 & 11\%\\
+199967 & 1\%\\
+205151 & 11\%\\
+213549 & 5\%\\
+216397 & 0\%\\
+230645 & 0\%\\
+232568 & 0\%\\
+233566 & 0\%\\
+235042 & 25\%\\
+237856 & 1\%\\
+242328 & 7\%\\
+245099 & 2\%\\
+257876 & 3\%\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{enumerate}
+\item Gráfico
+\label{sec:orgfaaa9d1}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
+\end{center}
+\end{enumerate}
+
 
 \section{Lista de presença e notas}
-\label{sec:orgf1cdf1d}
+\label{sec:org6706ec0}
 \begin{center}\begin{landscape}
 \small
 \setlength\LTleft{0pt}
@@ -283,4 +315,37 @@ RA Sorteados
 \textbf{225851} &                william de sousa rabelo &                  50.0 &           - &           - &           - &                      0.0 &  w225851@dac.unicamp.br \\
 \end{longtable}
 \end{landscape}\end{center}
+
+
+
+\section{Seminários}
+\label{sec:org81384fa}
+\subsection{Sorteio}
+\label{sec:orgf557a80}
+\begin{table}
+\centering
+\caption{Resultado sorteio das atas - Seminários}
+\begin{tabular}{ll}
+\toprule
+{} & Resultado \\
+Grupos   &           \\
+\midrule
+Grupo 1  &    Ata 10 \\
+Grupo 2  &     Ata 8 \\
+Grupo 3  &    Ata 12 \\
+Grupo 4  &     Ata 2 \\
+Grupo 5  &     Ata 3 \\
+Grupo 6  &     Ata 1 \\
+Grupo 7  &    Ata 11 \\
+Grupo 8  &     Ata 4 \\
+Grupo 9  &     Ata 9 \\
+Grupo 10 &     Ata 7 \\
+Grupo 11 &     Ata 6 \\
+Grupo 12 &     Ata 5 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\subsubsection{{\bfseries\sffamily TODO} Selecionar Atas e criar map para substituição}
+\label{sec:orgc3a5012}
 \end{document}
