--- a/Materias/2S2020/PED_CE342/Turma_A/Turma_A.tex
+++ b/Materias/2S2020/PED_CE342/Turma_A/Turma_A.tex
@@ -1,4 +1,4 @@
-% Created 2020-11-14 sáb 16:38
+% Created 2020-11-14 sáb 16:41
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -38,7 +38,7 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \maketitle
 
 \section{Monetaristas}
-\label{sec:org03e197f}
+\label{sec:org9888e2b}
 
 \begin{center}
 \begin{longtable}{lr}
@@ -102,20 +102,20 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \end{center}
 
 \subsection{Notas}
-\label{sec:org7f24a7d}
+\label{sec:orgc60ef72}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/monetaristas.png}
 \end{center}
 
 \subsection{Notas e presença}
-\label{sec:org8499f55}
+\label{sec:org9cbc678}
 
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/monetaristas_presenca.png}
 \end{center}
 
 \section{Novos Clássicos}
-\label{sec:org8437e40}
+\label{sec:org26b5b07}
 
 \begin{itemize}
 \item[{$\square$}] Identificar respostas das questões (forms)
@@ -183,19 +183,19 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \end{longtable}
 \end{center}
 \subsection{Notas}
-\label{sec:org36106b7}
+\label{sec:orga10c9b4}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/novosclassicos.png}
 \end{center}
 \subsection{Notas e Presença}
-\label{sec:org57670cf}
+\label{sec:org9b86f48}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/novosclassicos_presenca.png}
 \end{center}
 \subsection{Verificação de plágio por amostragem}
-\label{sec:orgf434315}
+\label{sec:org09dddd4}
 \subsubsection{Sorteio}
-\label{sec:org94be475}
+\label{sec:org4cef2d1}
 
 \begin{minted}[frame=lines,fontsize=\scriptsize,linenos]{python}
 pre_selecionados = ["238414"]
@@ -235,7 +235,7 @@ RA Sorteados
 13       245459
 \end{verbatim}
 \subsubsection{Resultado Turnitin}
-\label{sec:org5a73677}
+\label{sec:orgdad0978}
 
 \begin{table}[htbp]
 \caption{\label{TurnitinNvC}Resumo relatório de origilidadade}
@@ -264,14 +264,14 @@ RA & Grau de semelhança\\
 
 \begin{enumerate}
 \item Gráfico
-\label{sec:org4281882}
+\label{sec:org84adbc5}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./figs/turintin_NvC_fig.png}
 \end{center}
 \end{enumerate}
 
 \section{Lista de presença e notas}
-\label{sec:orgad5ff70}
+\label{sec:orgd9c632c}
 \begin{center}\begin{landscape}
 \small
 \setlength\LTleft{0pt}
@@ -338,5 +338,34 @@ RA & Grau de semelhança\\
 
 
 \section{Seminários}
-\label{sec:org658b33e}
+\label{sec:org62ac50b}
+\subsection{Sorteio}
+\label{sec:org773f78b}
+\begin{table}
+\centering
+\caption{Resultado sorteio das atas - Seminários}
+\begin{tabular}{ll}
+\toprule
+{} & Resultado \\
+Grupos   &           \\
+\midrule
+Grupo 1  &     Ata 7 \\
+Grupo 2  &     Ata 5 \\
+Grupo 3  &     Ata 1 \\
+Grupo 4  &    Ata 11 \\
+Grupo 5  &     Ata 8 \\
+Grupo 6  &     Ata 9 \\
+Grupo 7  &    Ata 12 \\
+Grupo 8  &    Ata 10 \\
+Grupo 9  &     Ata 2 \\
+Grupo 10 &     Ata 4 \\
+Grupo 11 &     Ata 6 \\
+Grupo 12 &     Ata 3 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+
+\subsubsection{{\bfseries\sffamily TODO} Selecionar Atas e criar map para substituir}
+\label{sec:org6f8c4e8}
 \end{document}
